--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
         
           <div class="icons-social-media">
             <div class="icons">
-           <a href="#" aria-label="Facebook profile"><ion-icon name="logo-facebook"></ion-icon></a> 
-           <a href="#" aria-label="Twitter profile"><ion-icon name="logo-twitter"></ion-icon></a> 
-           <a href="#" aria-label="Instagram"><ion-icon name="logo-instagram"></ion-icon> </a> 
+           <a href="#" aria-label="Facebook profile"><ion-icon name="logo-facebook" alt="-"></ion-icon></a> 
+           <a href="#" aria-label="Twitter profile"><ion-icon name="logo-twitter" alt="-"></ion-icon></a> 
+           <a href="#" aria-label="Instagram"><ion-icon name="logo-instagram" alt="-"></ion-icon> </a> 
           </div>
           <div>
            <p class="copyright" id="text">&copy; Copyright 2018 Huddle. All rights reserved.</p> 
@@ -133,13 +133,13 @@
           </div>
          
 </div>
-
-</footer>
 <div class="attribution">
   <p>
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/Arzu475" target="_blank">Arzu475</a>.
   </p>
+</footer>
+
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
