--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <div class="icons">
            <a href="#" aria-label="Facebook profile"><ion-icon name="logo-facebook" alt="-"></ion-icon></a> 
            <a href="#" aria-label="Twitter profile"><ion-icon name="logo-twitter" alt="-"></ion-icon></a> 
-           <a href="#" aria-label="Instagram"><ion-icon name="logo-instagram" alt="-"></ion-icon> </a> 
+           <a href="#" aria-label="Instagram profile"><ion-icon name="logo-instagram" alt="-"></ion-icon> </a> 
           </div>
           <div>
            <p class="copyright" id="text">&copy; Copyright 2018 Huddle. All rights reserved.</p> 
