--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@
           </div>
          
 </div>
-<div class="attribution">
+</footer>
+
+<!-- <div class="attribution">
   <p>
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/Arzu475" target="_blank">Arzu475</a>.
-  </p>
-</footer>
-
-  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+  </p> -->
+<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
