--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
          <h1>Build The Community Your Fans Will Love</h1> 
           <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
             Create connections with your users as you engage in genuine discussion.</p>
+            <div class="btn">
             <button>Get Started For Free</button> 
+          </div>
           </div>
             <div class="hero-img">
            <img src="images/illustration-mockups.svg" alt="-">
@@ -84,7 +86,7 @@
      
          <div class="contact">
           <div class="logo-footer">
-            <img src="images/logo-footer (1).svg" alt="-">
+            <img src="images/logo-footer(1).svg" alt="-">
           </div>
           <div class="information">
           <div class="icon-contact"><img src="images/icon-location.svg" alt="-"></div>
@@ -115,7 +117,7 @@
            </div>
            <div class="links-2">
             <ul>
-              <li> <a href="#"> Career</a></li>
+              <li> <a href="#">Career</a></li>
               <li><a href="#">Blog</a> </li>
               <li><a href="#">Contact Us</a> </li>
             </ul>
@@ -123,9 +125,9 @@
         
           <div class="icons-social-media">
             <div class="icons">
-           <a href="#" aria-label="Facebook profile"><ion-icon name="logo-facebook" alt="-"></ion-icon></a> 
-           <a href="#" aria-label="Twitter profile"><ion-icon name="logo-twitter" alt="-"></ion-icon></a> 
-           <a href="#" aria-label="Instagram profile"><ion-icon name="logo-instagram" alt="-"></ion-icon> </a> 
+           <a href="#" aria-label="Facebook profile"><ion-icon name="logo-facebook" role="img" alt="-"></ion-icon></a> 
+           <a href="#" aria-label="Twitter profile"><ion-icon name="logo-twitter" role="img" alt="-"></ion-icon></a> 
+           <a href="#" aria-label="Instagram profile"><ion-icon name="logo-instagram" role="img" alt="-"></ion-icon> </a> 
           </div>
           <div>
            <p class="copyright" id="text">&copy; Copyright 2018 Huddle. All rights reserved.</p> 
