--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@
         
           <div class="icons-social-media">
             <div class="icons">
-           <a href="#" aria-label="Facebook profile"><ion-icon name="logo-facebook" role="img" alt="-"></ion-icon></a> 
-           <a href="#" aria-label="Twitter profile"><ion-icon name="logo-twitter" role="img" alt="-"></ion-icon></a> 
-           <a href="#" aria-label="Instagram profile"><ion-icon name="logo-instagram" role="img" alt="-"></ion-icon> </a> 
+           <a href="#" aria-label="Facebook profile"><ion-icon name="logo-facebook" role="img" aria-label="icon-facebook"></ion-icon></a> 
+           <a href="#" aria-label="Twitter profile"><ion-icon name="logo-twitter" role="img" aria-label="icon-twitter"></ion-icon></a> 
+           <a href="#" aria-label="Instagram profile"><ion-icon name="logo-instagram" role="img" aria-label="icon-instagram"></ion-icon> </a> 
           </div>
           <div>
-           <p class="copyright" id="text">&copy; Copyright 2018 Huddle. All rights reserved.</p> 
+           <p class="copyright">&copy; Copyright 2018 Huddle. All rights reserved.</p> 
            </div>
           </div>
          
